--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,19 @@ jobs:
       - name: Install PcbDraw
         run: pip3 install PcbDraw
 
-      - name: Install KICAD
+      - name: Add repository
         run: |
           sudo add-apt-repository --yes ppa:kicad/kicad-5.1-releases
+          sudo add-apt-repository --yes ppa:openscad/releases
           sudo apt update
+		
+      - name: Install KICAD
+        run: |
           sudo apt install --install-recommends kicad
+		  
+      - name: Install OPENSCAD
+        run: |
+          sudo apt install --install-recommends openscad
 
       - name: Run kikit 4.21
         run: /home/runner/.local/bin/kikit fab jlcpcb --assembly --schematic ./ModuleV421/ModuleV421.sch --field LCSCStockCode --missingWarn ./ModuleV421/ModuleV421.kicad_pcb ./ModuleV421
